// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compontent snapshots should render a info alert 1`] = `
<div>
  <section
    aria-label="Site alert,"
    class="grid-row usa-site-alert usa-site-alert--info usa-site-alert--slim usa-site-alert--no-icon"
    role="alert"
  >
    <div
      class="usa-alert grid-col"
    >
      <div
        class="usa-alert__body"
      >
        <div
          class="usa-alert__text"
        >
          Test body2
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`compontent snapshots should render an emergency alert 1`] = `
<div>
  <section
    aria-label="Site alert,"
    class="grid-row usa-site-alert usa-site-alert--emergency"
    role="alert"
  >
    <div
      class="usa-alert grid-col"
    >
      <div
        class="usa-alert__body"
      >
        <h3
          class="usa-alert__heading"
        >
          Test1
        </h3>
        <div
          class="usa-alert__text"
        >
          Test body1
        </div>
      </div>
    </div>
  </section>
</div>
`;
